--- a/dolphinscheduler-dao/src/main/resources/datasource.properties
+++ b/dolphinscheduler-dao/src/main/resources/datasource.properties
@@ -16,10 +16,16 @@
 #
         
 # postgresql
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/dolphinscheduler
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dolphinscheduler
+#spring.datasource.username=test
+#spring.datasource.password=test
+
+# mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.8.199.242:3306/dolphinscheduler
+spring.datasource.username=crg
+spring.datasource.password=Bv4s8@U!
 
 # connection configuration
 #spring.datasource.initialSize=5
